--- a/tech_review_colab.ipynb
+++ b/tech_review_colab.ipynb
@@ -3490,14 +3490,29 @@
       },
       "source": [
         "## 1. Introduction\n",
-        "This document illustrates the use of the BERT pre-trained model to classify Twitter tweet's sentiment.\n",
+        "This document illustrates the use of the BERT pre-trained model to classify the sentiment of Twitter tweets.\n",
         "\n",
         "The target audience of the document:\n",
-        "1. The audience who has no experience in BERT pre-training Model.\n",
-        "2. The audience who has the curiosity on how to use and fine-tune the BERT model for simple training tasks.\n",
-        "3. The audience who has some basic understanding of Data Mining and Machine Learning.\n",
-        "4. The audience who have basic knowledge of Python 3, PyTorch usage, and Jupyter Notebook.\n",
-        "5. And of course, the audience who is looking forward to spending fun time with Python code!"
+        "<ol>\n",
+        "<li>The audience who has <i><b>no experience in BERT pre-training Model</b></i>.</li>\n",
+        "<li>The audience who has the curiosity on how to use and fine-tune the BERT model for simple training tasks such as text classification (categorization).</li>\n",
+        "<li>The audience who has some basic understanding of Data Mining and Machine Learning.</li>\n",
+        "<ul>\n",
+        "<li> Understand the concept of Text Mining.</li>\n",
+        "<li> Understand the concept of Training and Validation datasets</li>\n",
+        "<li> Understand the concept of F1-Score evaluation</li>\n",
+        "</ul>\n",
+        "<li>The audience who have basic knowledge of Python 3, PyTorch usage, and Jupyter Notebook.</li>\n",
+        "<li>And of course, the audience who is looking forward to spending fun time with Python code!</li>\n",
+        "</ol>\n",
+        "\n",
+        "The main sources of inpiration of this document are the following Internet sources:\n",
+        "<ol>\n",
+        "<li>Cousera course: https://www.coursera.org/learn/sentiment-analysis-bert/home/welcome</li>\n",
+        "<li>An article: https://mccormickml.com/2019/07/22/BERT-fine-tuning/</li>\n",
+        "</ol>\n",
+        "\n",
+        "I try to combines several BERT concepts from both sources into a single document. I hope this document will be useful for everyone who is new to BERT world!"
       ]
     },
     {
