--- a/tech_review_colab.ipynb
+++ b/tech_review_colab.ipynb
@@ -3525,7 +3525,7 @@
         "### 2. 1. What is BERT?\n",
         "BERT is Bidirectional Encoded Representations from Transformer is a Natural Processing Language (NLP) pre-training model developed by Google (https://en.wikipedia.org/wiki/BERT_(language_model)). \n",
         "\n",
-        "Useful Internet sources to understand basic concept of BERT:\n",
+        "Useful Internet sources to understand BERT:\n",
         "1.\tBERT for dummies: https://towardsdatascience.com/bert-for-dummies-step-by-step-tutorial-fb90890ffe03\n",
         "2.\tThe Illustrated BERT: http://jalammar.github.io/illustrated-bert/\n",
         "3.\tThe BERT original paper:  https://arxiv.org/abs/1810.04805.\n",
